--- a/ObjectMappingSample/PodFile
+++ b/ObjectMappingSample/PodFile
@@ -1,4 +1,5 @@
 platform :ios, '7.0'
 inhibit_all_warnings!
 pod "AFNetworking", "~> 2.0"
+pod "AFNetworkActivityLogger"
 pod "MagicalRecord", "~> 2.2"
