--- a/ObjectMappingSample/PodFile
+++ b/ObjectMappingSample/PodFile
@@ -1,5 +1,4 @@
 platform :ios, '7.0'
 inhibit_all_warnings!
-pod "AFNetworking", "~> 2.0"
+pod "PSObjectMapping", :git => "git=> https://github.com/premosystems/PSObjectMapping"
 pod "AFNetworkActivityLogger"
-pod "MagicalRecord", "~> 2.2"
